--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
+  "java.project.referencedLibraries": [
+    "mysql-connector-j-9.1.0.jar"
+  ],
   "java.debug.settings.onBuildFailureProceed": true
 }
